Add sold List in Farmer App Add purchase list on Merchant App

--- a/farmerapp/templates/farmerbase.html
+++ b/farmerapp/templates/farmerbase.html
@@ -97,9 +97,9 @@
             </li>
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link disabled" href="{% url 'adminapp:purchase' %}">
+                <a class="nav-link" href="{% url 'farmerapp:sold' %}">
                     <i class="fa-solid fa-cart-shopping"></i>
-                    <span>Closing</span></a>
+                    <span>Sold Item</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
