--- a/merchantapp/templates/merchantbase.html
+++ b/merchantapp/templates/merchantbase.html
@@ -91,13 +91,13 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'adminapp:booking' %}">
+                <a class="nav-link" href="{% url 'merchantapp:purchasedprod' %}">
                  <i class="fa-solid fa-warehouse"></i>
-                    <span>Booking</span></a>
+                    <span>Purchased </span></a>
             </li>
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'adminapp:purchase' %}">
+                <a class="nav-link" href="#">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <span>Closing</span></a>
             </li>
