--- a/merchantapp/templates/viewprod.html
+++ b/merchantapp/templates/viewprod.html
@@ -27,7 +27,10 @@
                                     <div class="card-body">
                                         <div class="text-center">
                                             <h5 class="card-title">{{product.productName}}</h5>
-                                            <p class="text-muted mb-4">Seller : {{product.farmerName}}</p>
+                                            <p class="text-muted mb-4 fw-lighter" style="font-size:8px">
+                                                <span class="fw-bold"> Seller :</span> {{sellerName}}<br>
+                                                <span class="fw-bold">Seller Id :</span> {{product.farmerName}}<br>
+                                            </p>
                                         </div>
                                         <div>
                                             <div class="d-flex justify-content-between">
