--- a/adminapp/templates/adminbase.html
+++ b/adminapp/templates/adminbase.html
@@ -97,6 +97,18 @@
             </li>
             <!-- Nav Item - Charts -->
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'adminapp:sellingitems' %}">
+                 <i class="fa-solid fa-warehouse"></i>
+                    <span>Available Product</span></a>
+            </li>
+            <!-- Nav Item - Charts -->
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'adminapp:solditem' %}">
+                 <i class="fa-solid fa-warehouse"></i>
+                    <span>Sold Item</span></a>
+            </li>
+            <!-- Nav Item - Charts -->
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'adminapp:purchase' %}">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <span>Closing</span></a>
