--- a/merchantapp/templates/purchasedprod.html
+++ b/merchantapp/templates/purchasedprod.html
@@ -22,6 +22,7 @@
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                     <tr>
+                         <th>Order Id</th>
                         <th>Seller Id</th>
                         <th>Seller Name</th>
                         <th>Product</th>
@@ -33,6 +34,7 @@
                     <tfoot>
 
                     <tr>
+                        <th>Order Id</th>
                         <th>Seller Id</th>
                         <th>Seller Name</th>
                         <th>Product</th>
@@ -45,6 +47,7 @@
                     <tbody>
                     {% for b in orderObj %}
                     <tr>
+                        <td class="">{{ b.id }}</td>
                         <td class="">{{ b.farmerId }}</td>
                         <td class="">{{ b.farmerName }}</td>
                         <td class="">{{ b.product }}</td>
