--- a/adminapp/templates/adminbase.html
+++ b/adminapp/templates/adminbase.html
@@ -147,9 +147,9 @@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav">
-                        <li>
-                            <h3 class="ms-3" style="color:#48BF91">Stockroom Mart</h3>
-                        </li>
+                           <li>
+                        <h3 class="ms-3" style="color: #4e73df;color: linear-gradient(180deg,#4e73df 10%,#224abe 100%);">Admin</h3>
+                    </li>
                         <!-- Nav Item - Search Dropdown (Visible Only XS) -->
                         <li class="nav-item dropdown no-arrow d-sm-none">
                             <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
