--- a/farmerapp/templates/prodList.html
+++ b/farmerapp/templates/prodList.html
@@ -1,5 +1,5 @@
 {% extends 'farmerbase.html' %}
-{% block name %}{{farmerName}}{% endblock %}
+{% block name %}{{farmerName.name}}{% endblock %}
 {% block body%}
 <!-- Begin Page Content -->
 <div class="container-fluid">
