--- a/farmerapp/templates/farmerchangepwd.html
+++ b/farmerapp/templates/farmerchangepwd.html
@@ -3,7 +3,7 @@
 {% block body%}
 <div class="container-fluid">
     <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Enquiries Management</h1>
+    <h1 class="h3 mb-2 text-gray-800">efeEnquiries Management</h1>
     <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below.
         For more information about DataTables, please visit the <a target="_blank"
         >official DataTables documentation</a>.
@@ -20,33 +20,44 @@
                                     <div class=" p-md-2">
                                         <div class="row ">
                                             <div class="col-md-12 col-lg-6 col-xl-12 order-2 order-lg-1">
-                                                <p class="text-center h1 fw-bold mb-2 mx-1 mx-md-4 mt-2">Upload Product </p>
+                                                <p class="text-center h1 fw-bold mb-2 mx-1 mx-md-4 mt-2">Change
+                                                    Password</p>
                                                 <div class="row">
                                                     <div class="col-md-3"></div>
                                                     <div class="col-md-6">
-                                                        {% if ns %}
+                                                        {% if msg %}
                                                         <div class="alert alert-success alert-dismissible fade show"
                                                              role="alert">
-                                                            {{ns}}
+                                                            {{msg}}
                                                             <button type="button" class="btn-close"
                                                                     data-bs-dismiss="alert"
                                                                     aria-label="Close"></button>
                                                         </div>
                                                         {% endif %}
-                                                        <form class="mx-1 mx-md-4"  method="POST" action="{% url 'farmerapp:uploadProd' %}" enctype="multipart/form-data">
+                                                        <form class="mx-1 mx-md-4" action="{% url 'farmerapp:changepwd' %}" method="POST">
                                                             {% csrf_token %}
                                                             <div class="d-flex flex-row align-items-center my-2">
                                                                 <div class="form-outline flex-fill mb-0">
-                                                                    <label>Product Name</label>
-                                                                    <input type="text" class="form-control" required="true" id="productName" name="productName"/>
-                                                                    <label>Quantity</label>
-                                                                    <input type="number" class="form-control" id="qty" name="qty"/>
-                                                                    <label>Price</label>
-                                                                    <input type="text" class="form-control" id="price" name="price"/>
+                                                                    <label>Enter Old Password</label>
+                                                                    <input type="password" name="oldpassword"
+                                                                           required="true"
+                                                                           class="form-control text-center">
+                                                                    <label>New Password</label>
+                                                                    <input type="password" name="newpassword"
+                                                                           required="true"
+                                                                           class="form-control text-center">
+                                                                    <label> Confirm New Password</label>
+                                                                    <input type="password" name="confirmpassword"
+                                                                           required="true"
+                                                                           class="form-control text-center">
+
                                                                 </div>
                                                             </div>
                                                             <div class="d-flex justify-content-center mx-4 my-2 mb-lg-4">
-                                                                <button type="submit" class="btn btn-primary btn-sm form-control">Post</button>
+                                                                <button type="submit" class="btn btn-lg text-light"
+                                                                        style="background-color: #4e73df;background-color: linear-gradient(180deg,#4e73df 10%,#224abe 100%);">
+                                                                    Change
+                                                                </button>
                                                             </div>
                                                         </form>
                                                     </div>
@@ -64,6 +75,4 @@
         </div>
     </div>
 </div>
-
-
-{% endblock %}
+{% endblock body %}
