--- a/farmerapp/templates/sold.html
+++ b/farmerapp/templates/sold.html
@@ -1,5 +1,5 @@
 {% extends 'farmerbase.html' %}
-{% block name %}{{farmerName}}{% endblock %}
+{% block name %}{{farmerName.name}}{% endblock %}
 {% block body%}
 <!-- Begin Page Content -->
 <div class="container-fluid">
@@ -14,6 +14,134 @@
         <div class="card-header py-3">
             <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
         </div>
+        <!--        Start Chart-->
+        <div class="container my-3">
+
+            <div class="col-md-12 text-center">
+                <div class="container">
+                    <div class="row my-5">
+                        <div class="col-md-6">
+                            <div class="bg-white">
+                                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+                                <canvas id="myChart1" width="400" height="300"></canvas>
+                                <script>
+                        var ctx = document.getElementById('myChart1').getContext('2d');
+                        var myChart1 = new Chart(ctx, {
+                            type: 'pie',
+                            data: {
+                                labels: [ {% for j in soldobj %} '{{ j.product }}',{% endfor %}],
+                                datasets: [{
+                                    label: 'Products',
+                                    data: [{% for j in orderObj %} '{{ j.qty }}',{% endfor %}],
+                                    backgroundColor: [
+                                        'rgba(255, 99, 132, 1)',
+                                        'rgba(54, 162, 235, 1)',
+                                        'rgba(255, 206, 86, 1)',
+                                        'rgba(75, 192, 192, 1)',
+                                        'rgba(153, 102, 255, 1)',
+                                        'rgba(255, 139, 64, 1)',
+                                        'rgba(255, 19, 132, 1)',
+                                        'rgba(54, 162, 234, 1)',
+                                        'rgba(255, 206, 86, 1)',
+                                        'rgba(75, 112, 192, 1)',
+                                        'rgba(151, 102, 255, 1)',
+                                        'rgba(25, 159, 64, 1)',
+                                        'rgba(25, 559, 64, 1)'
+                                    ],
+                                    borderColor: [
+                                        'rgba(255, 99, 132, 1)',
+                                        'rgba(54, 162, 235, 1)',
+                                        'rgba(255, 206, 86, 1)',
+                                        'rgba(75, 192, 192, 1)',
+                                        'rgba(153, 102, 255, 1)',
+                                        'rgba(255, 159, 64, 1)',
+                                        'rgba(255, 19, 132, 1)',
+                                        'rgba(54, 162, 234, 1)',
+                                        'rgba(255, 206, 86, 1)',
+                                        'rgba(75, 112, 192, 1)',
+                                        'rgba(151, 102, 255, 1)',
+                                        'rgba(25, 159, 64, 1)',
+                                        'rgba(25, 559, 64, 1)'
+                                    ],
+                                    borderWidth: 1
+                                }]
+                            },
+                            options: {
+                                scales: {
+                                    yAxes: [{
+                                        ticks: {
+                                            beginAtZero: true
+                                        }
+                                    }]
+                                }
+                            }
+                        });
+
+
+
+
+
+
+                                </script>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="bg-white">
+                                <canvas id="myChart" width="400" height="300"></canvas>
+                                <script>
+                        var ctx = document.getElementById('myChart').getContext('2d');
+                        var myChart = new Chart(ctx, { type: 'bar', data: {
+                                labels: [{% for j in orderObj %} '{{ j.product }}',{% endfor %}],datasets: [{label: 'Products',data: [{% for j in orderObj %} '{{ j.date.hour }}',{% endfor %}],backgroundColor: [
+                                        'rgba(255, 99, 132, 1)',
+                                        'rgba(54, 162, 235, 1)',
+                                        'rgba(255, 206, 86, 1)',
+                                        'rgba(75, 192, 192, 1)',
+                                        'rgba(153, 102, 255, 1)',
+                                        'rgba(255, 159, 64, 1)',
+                                         'rgba(255, 212, 86, 1)',
+                                        'rgba(75, 192, 112, 1)',
+                                    ],
+                                    borderColor: [
+                                        'rgba(255, 99, 132, 1)',
+                                        'rgba(54, 162, 235, 1)',
+                                        'rgba(255, 206, 86, 1)',
+                                        'rgba(75, 192, 192, 1)',
+                                        'rgba(153, 102, 255, 1)',
+                                        'rgba(255, 159, 64, 1)',
+                                        'rgba(255, 212, 86, 1)',
+                                        'rgba(75, 192, 112, 1)',
+                                    ],
+                                    borderWidth: 1
+                                }]
+                            },
+                            options: {
+                                scales: {
+                                    yAxes: [{
+                                        ticks: {
+                                            beginAtZero: true
+                                        }
+                                    }]
+                                }
+                            }
+                        });
+
+
+
+
+
+
+                                </script>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--                https://github.com/KenBroTech/Bootstrap-Dashboard-Interface-Design/blob/master/index.html-->
+                <!--End Graphs-->
+
+                <!--                Source: https://codepen.io/luisar/pen/JjoOZav?editors=1100?-->
+            </div>
+        </div>
+        <!--        End Chart-->
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
@@ -69,8 +197,10 @@
                                 <form method="post" action="{% url 'farmerapp:updateStatus' %}">
                                     {% csrf_token %}
                                     <input type="text" class="form-control " name="orderId" value="{{ b.id }}" hidden>
-                                    <textarea type="text" class="form-control text-center" name="status" placeholder="{{ b.track_update }}"></textarea>
-                                    <input class="btn btn-outline-secondary btn-sm btn-block my-2" type="submit" value="Update">
+                                    <textarea type="text" class="form-control text-center" name="status"
+                                              placeholder="{{ b.track_update }}"></textarea>
+                                    <input class="btn btn-outline-secondary btn-sm btn-block my-2" type="submit"
+                                           value="Update">
                                 </form>
                             </div>
                         </td>
