--- a/merchantapp/templates/merchantbase.html
+++ b/merchantapp/templates/merchantbase.html
@@ -31,6 +31,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
           integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <style>
+        .text-primary-color{
+            color: #4e73df;
+            color: linear-gradient(180deg,#4e73df 10%,#224abe 100%);"
+        }
+    </style>
 
 
 </head>
@@ -136,7 +142,7 @@
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav">
                         <li>
-                            <h3 class="ms-3" style="color:#48BF91">{% block username%}  {% endblock %}</h3>
+                            <h3 class="ms-3 text-primary-color">{% block username%}  {% endblock %}</h3>
                         </li>
                         <!-- Nav Item - Search Dropdown (Visible Only XS) -->
                         <li class="nav-item dropdown no-arrow d-sm-none">
