--- a/merchantapp/templates/merchanthome.html
+++ b/merchantapp/templates/merchanthome.html
@@ -1,7 +1,7 @@
 {% extends 'merchantbase.html' %}
 
 {% block username%}
-{{merchantName}}
+{{merchantName.name}}
 {% endblock %}
 
 {% block body%}
