--- a/farmerapp/templates/farmerbase.html
+++ b/farmerapp/templates/farmerbase.html
@@ -102,6 +102,12 @@
                 <i class="fa-solid fa-cart-shopping"></i>
                 <span>Sold Item</span></a>
         </li>
+        <!-- Nav Item - Charts -->
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'farmerapp:socialpage' %}">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <span>Irrigreat App</span></a>
+        </li>
 
         <!-- Nav Item - Tables -->
         <li class="nav-item">
