--- a/farmerapp/templates/prodList.html
+++ b/farmerapp/templates/prodList.html
@@ -23,6 +23,7 @@
                         <th scope="col">Product</th>
                         <th scope="col">Price<em class="text-muted" style="font-size:10px"> per kg</em></th>
                         <th scope="col">Quantity</th>
+                        <th scope="col">Likes</th>
                         <th scope="col">Remove</th>
                     </tr>
                     </thead>
@@ -33,6 +34,7 @@
                         <th scope="col">Product</th>
                         <th scope="col">Price<em class="text-muted" style="font-size:10px"> per kg</em></th>
                         <th scope="col">Quantity</th>
+                        <th scope="col">Likes</th>
                         <th scope="col">Remove</th>
                     </tr>
                     </tfoot>
@@ -43,6 +45,7 @@
                         <td>{{product}}</td>
                         <td>{{product.price}}</td>
                         <td>{{product.qty}}</td>
+                        <td>{{total_likes}}</td>
                         <td><a href="removeprod/{{product.id}}" class="btn btn-outline-danger btn-sm">Remove</a></td>
                     </tr>
                     {% endfor %}
