--- a/irrigreatapp/templates/sm_login.html
+++ b/irrigreatapp/templates/sm_login.html
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group col-md-12">
               <button class="btn btn-primary btn-sm btn-block">Sign In</button>
-              <span class="pull-right"><a href="#">Register</a></span><span><a href="#">Need help?</a></span>
+              <span class="pull-right"><a href="{% url 'irrigreatapp:smRegView' %}">Register</a></span><span><a href="#">Need help?</a></span>
             </div>
           </form>
       </div>
