--- a/merchantapp/templates/viewprod.html
+++ b/merchantapp/templates/viewprod.html
@@ -22,8 +22,7 @@
                                 <!--                                <div class="col-md-8 col-lg-6 col-xl-4">-->
                                 <div class="card text-black">
 
-                                    <img src="https://picsum.photos/300/200" class="card-img-top mt-2"
-                                         alt="Apple Computer"/>
+                                    <img src="https://picsum.photos/300/200" class="card-img-top mt-2" style='min-height:22rem;' alt="Apple Computer"/>
                                     <div class="card-body">
                                         <div class="text-center">
                                             <h5 class="card-title">{{product.productName}}</h5>
@@ -69,8 +68,20 @@
                                 <div class='col-sm-4'>
                                     <form action='like_post/{{product.id}}' method='POST'>
                                         {% csrf_token %}
-                                        <button type='submit' name='{{product.id}}' value='{{product.id}}' class="btn btn-primary btn-sm w-100">{{product.total_likes}} Like <i class="{{likesymb}}"></i></button>
-                                    </form>
+                                        
+                                       
+                                        <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                                            <button type='submit' name='{{product.id}}' value='{{product.id}}' class="btn btn-sm btn-primary btn-sm w-100">{{product.total_likes}} Like <i class="{{likesymb}}" ></i></button>
+                                            <div class="btn-group" role="group">
+                                              <button type="button" class="btn  btn-sm btn-primary dropdown-toggle py-0" data-bs-toggle="dropdown" aria-expanded="false" style='font-size:18px '></button>
+                                              <ul class="dropdown-menu">
+                                                {% for l in product.likes.all %}
+                                                    <li><a class="dropdown-item" href="#">  {{l.name}}</a></li>
+                                                {%endfor%}
+                                            </ul>
+                                            </div>
+                                          </div>
+                                    </form>  
                                 </div>
                             </div>
                     </div>
@@ -79,5 +90,6 @@
         </div>
     </div>
 </div>
+
 
 {% endblock %}
