--- a/irrigreatapp/templates/blogbase.html
+++ b/irrigreatapp/templates/blogbase.html
@@ -33,7 +33,7 @@
 
 </head>
 <body>
-
+{% include 'headNav.html' %}
 <div class="container">
     {% block baseBody %} {% endblock baseBody %}
 </div>
