--- a/irrigreatapp/templates/createPost.html
+++ b/irrigreatapp/templates/createPost.html
@@ -1,8 +1,11 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" type="module" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous"/>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" type="module"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
-    <style>
+<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
+<style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 body {
 	margin: 0;
@@ -142,8 +145,9 @@ body {
         margin: 0px;
         opacity:0;
    }
-    </style>
-    <script>
+
+</style>
+<script>
         var isAdvancedUpload = function() {
             var div = document.createElement('div');
             return (('draggable' in div) || ('ondragstart' in div && 'ondrop' in div)) && 'FormData' in window && 'FileReader' in window;
@@ -251,40 +255,44 @@ body {
               document.querySelector(".label").innerHTML = `or <span class="browse-files"> <input type="file" class="default-file-input"/> <span class="browse-files-text">browse file</span> <span>from device</span> </span>`;
               uploadButton.innerHTML = `Upload`;
           });
-    </script>
+
+</script>
 <div class="container">
     <h1>Create Post</h1>
     <form action='createPost/{{user.id}}' method='POST' enctype="multipart/form-data">
         {% csrf_token %}
         {% comment %} Images Start {% endcomment %}
 
-            <input readonly hidden type="text" name='userid' value="{{username.id}}">
-            <div class="drag-file-area mx-auto">
-                <span class="material-icons-outlined upload-icon"> file_upload </span>
-                
-                <label class="label"><span class="browse-files">
-                    <input type="file" id="realupload"  name='postimg' class=" realupload default-file-input"/>
+        <input readonly hidden type="text" name='userid' value="{{username.id}}">
+        <div class="drag-file-area mx-auto">
+            <span class="material-icons-outlined upload-icon"> file_upload </span>
+
+            <label class="label"><span class="browse-files">
+                    <input type="file" id="realupload" name='postimg' class=" realupload default-file-input"/>
                      </span>
 
-                </label>
-                  <div class="browse-files-text">browse file  <span>from device</span> </div>
-            </div>
-            <span class="cannot-upload-message"> <span class="material-icons-outlined">error</span> Please select a file first <span class="material-icons-outlined cancel-alert-button">cancel</span> </span>
-            <div class="file-block">
-                <div class="file-info"> <span class="material-icons-outlined file-icon">description</span> <span class="file-name"> </span> | <span class="file-size">  </span> </div>
-                <span class="material-icons remove-file-icon">delete</span>
-                <div class="progress-bar"> </div>
-            </div>
-            
+            </label>
+            <div class="browse-files-text">browse file <span>from device</span></div>
+        </div>
+        <span class="cannot-upload-message"> <span class="material-icons-outlined">error</span> Please select a file first <span
+                class="material-icons-outlined cancel-alert-button">cancel</span> </span>
+        <div class="file-block">
+            <div class="file-info"><span class="material-icons-outlined file-icon">description</span> <span
+                    class="file-name"> </span> | <span class="file-size">  </span></div>
+            <span class="material-icons remove-file-icon">delete</span>
+            <div class="progress-bar"></div>
+        </div>
+
         {% comment %} Imagrs end {% endcomment %}
-      <div class="mb-3">
-        <label class="form-label">Caption</label>
-        <textarea class="form-control" name="postcaption"  rows="3"></textarea>
-      </div>
-      <button type="submit" class="upload-button mx-auto"> Upload </button>
+        <div class="mb-3">
+            <label class="form-label">Caption</label>
+            <textarea class="form-control" name="postcaption" rows="3"></textarea>
+        </div>
+        <button type="submit" class="upload-button mx-auto"> Upload</button>
     </form>
-  </div>
-  <script type="module">
+</div>
+<script type="module">
     import Autogrow from "https://cdn.jsdelivr.net/npm/vanilla-autogrow@1.0.0/autogrow.min.js";
     var inst = new Autogrow();
-  </script>
+
+</script>
