--- a/farmerapp/templates/farmerbase.html
+++ b/farmerapp/templates/farmerbase.html
@@ -102,10 +102,10 @@
                 <i class="fa-solid fa-cart-shopping"></i>
                 <span>Sold Item</span></a>
         </li>
-        <!-- Nav Item - Charts -->
+        <!-- Social Page -->
         <li class="nav-item">
             <a class="nav-link" href="{% url 'farmerapp:socialpage' %}">
-                <i class="fa-solid fa-cart-shopping"></i>
+                <i class="fa-duotone fa-hashtag"></i>
                 <span>Irrigreat App</span></a>
         </li>
 
