--- a/merchantapp/templates/merchantbase.html
+++ b/merchantapp/templates/merchantbase.html
@@ -114,6 +114,12 @@
                   <i class="fa-solid fa-list-check"></i>
                     <span>Enquiry Management</span></a>
             </li>
+             <!-- Social Page -->
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'merchantapp:socialpage' %}">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <span>Irrigreat App</span></a>
+        </li>l
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
