--- a/irrigreatapp/templates/headNav.html
+++ b/irrigreatapp/templates/headNav.html
@@ -23,6 +23,7 @@ body {
 	box-shadow: 0 0 4px rgba(0,0,0,.1);
 }
 .nav-link img {
+	object-fit:cover;
 	border-radius: 50%;
 	width: 36px;
 	height: 36px;
@@ -133,50 +134,93 @@ body {
 		width: 100%;
 	}
 }
+
+
 </style>
 
 
 <nav class="navbar navbar-expand-xl navbar-light bg-light">
-	<a href="#" class="navbar-brand"><i class="fa fa-cube"></i>Irri<b>great</b></a>
-	<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<!-- Collection of nav links, forms, and other content for toggling -->
-	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
-		<div class="navbar-nav">
-			<a href="{% url 'irrigreatapp:bloghome' %}" class="nav-item nav-link active">Profile</a>
-			<a href="#" class="nav-item nav-link">About</a>
-			<div class="nav-item dropdown">
-				<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services</a>
-				<div class="dropdown-menu">
-					<a href="#" class="dropdown-item">Web Design</a>
-					<a href="#" class="dropdown-item">Web Development</a>
-					<a href="#" class="dropdown-item">Graphic Design</a>
-					<a href="#" class="dropdown-item">Digital Marketing</a>
-				</div>
-			</div>
-			<a href="#" class="nav-item nav-link">Blog</a>
-			<a href="#" class="nav-item nav-link">Contact</a>
-		</div>
-		<form class="navbar-form form-inline">
-			<div class="input-group search-box">
-				<input type="text" id="search" class="form-control" placeholder="Search by Name">
-				<span class="input-group-addon"><i class="material-icons">&#xE8B6;</i></span>
-			</div>
-		</form>
-		<div class="navbar-nav ml-auto">
-			<a href="#" class="nav-item nav-link notifications"><i class="fa fa-bell-o"></i><span class="badge">1</span></a>
-			<a href="#" class="nav-item nav-link messages"><i class="fa fa-envelope-o"></i><span class="badge">10</span></a></a>
-			<div class="nav-item dropdown">
-				<a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle user-action"><img src="http://127.0.0.1:8000/media/{{username.image}}" class="avatar" alt="Avatar"> Paula Wilson</a>
-				<div class="dropdown-menu">
-					<a href="{% url 'irrigreatapp:bloghome' %}" class="dropdown-item"><i class="fa fa-user-o"></i> Profile</a></a>
-					<a href="#" class="dropdown-item"><i class="fa fa-calendar-o"></i> Calendar</a></a>
-					<a href="#" class="dropdown-item"><i class="fa fa-sliders"></i> Settings</a></a>
-					<div class="dropdown-divider"></div>
-					<a href="/irrigreatapp/smLogout" class="dropdown-item"><i class="material-icons">&#xE8AC;</i> Logout</a></a>
-				</div>
-			</div>
-		</div>
-	</div>
+    <a href="#" class="navbar-brand"><i class="fa fa-cube"></i>Irri<b>great</b></a>
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- Collection of nav links, forms, and other content for toggling -->
+    <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
+
+              <div class="header-links">
+                    <ul class="links d-flex align-items-center mt-3 mt-md-0">
+                        <li class="header-link-item border-end d-flex align-items-center active">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-columns mr-1 icon-md">
+                                <path d="M12 3h7a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-7m0-18H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h7m0-18v18"></path>
+                            </svg>
+                            <a class="pt-1px d-none d-md-block" href="#">Timeline</a>
+                        </li>
+                        <li class="header-link-item ml-3 pl-3 border-end d-flex align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-user mr-1 icon-md">
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                                <circle cx="12" cy="7" r="4"></circle>
+                            </svg>
+                            <a class="pt-1px d-none d-md-block" href="{% url 'irrigreatapp:bloghome' %}">Profile</a>
+                        </li>
+                        <li class="header-link-item ml-3 pl-3 border-end d-flex align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-users mr-1 icon-md">
+                                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                <circle cx="9" cy="7" r="4"></circle>
+                                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                            </svg>
+                            <a class="pt-1px d-none d-md-block" href="#">Friends <span
+                                    class="text-muted tx-12">{{logeduser.total_follow}}</span></a>
+                        </li>
+                        <li class="header-link-item ml-3 pl-3 border-end d-flex align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-image mr-1 icon-md">
+                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                                <circle cx="8.5" cy="8.5" r="1.5"></circle>
+                                <polyline points="21 15 16 10 5 21"></polyline>
+                            </svg>
+                            <a class="pt-1px d-none d-md-block" href="#">Photos</a>
+                        </li>
+                        <li class="header-link-item ml-3 pl-3 d-flex align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-video mr-1 icon-md">
+                                <polygon points="23 7 16 12 23 17 23 7"></polygon>
+                                <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+                            </svg>
+                            <a class="pt-1px d-none d-md-block" href="#">Videos</a>
+                        </li>
+                    </ul>
+                </div>
+        <form class="navbar-form form-inline">
+            <div class="input-group search-box">
+                <input type="text" id="search" class="form-control" placeholder="Search by Name">
+                <span class="input-group-addon"><i class="material-icons">&#xE8B6;</i></span>
+            </div>
+        </form>
+        <div class="navbar-nav ml-auto">
+            <a href="#" class="nav-item nav-link notifications"><i class="fa fa-bell-o"></i><span class="badge">1</span></a>
+            <a href="#" class="nav-item nav-link messages"><i class="fa fa-envelope-o"></i><span class="badge">10</span></a>
+            <div class="nav-item dropdown">
+                <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle user-action"><img
+                        src="http://127.0.0.1:8000/media/{{logeduser.image}}" class="avatar" alt="{{logeduser.fname}}">
+                    {{logeduser.fname}} {{logeduser.lname}}</a>
+                <div class="dropdown-menu">
+                    <a href="{% url 'irrigreatapp:bloghome' %}" class="dropdown-item"><i class="fa fa-user-o"></i>
+                        Profile</a>
+                    <a href="#" class="dropdown-item"><i class="fa fa-calendar-o"></i> Calendar</a>
+                    <a href="#" class="dropdown-item"><i class="fa fa-sliders"></i> Settings</a>
+                    <div class="dropdown-divider"></div>
+                    <a href="/irrigreatapp/smLogout" class="dropdown-item"><i class="material-icons">&#xE8AC;</i> Logout</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </nav>
