--- a/irrigreatapp/templates/showPost.html
+++ b/irrigreatapp/templates/showPost.html
@@ -1,4 +1,4 @@
-    {% load static %}
+{% load static %}
 <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
 <div class="card rounded">
     <div class="card-header">
@@ -25,7 +25,7 @@
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
                     <a class="dropdown-item d-flex align-items-center" href="/irrigreatapp/deletePost/{{p.id}}">
-                      <img src="https://img.icons8.com/ios-glyphs/30/000000/filled-trash.png"/>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/filled-trash.png"/>
                         <span class="">Delete</span></a>
                     <a class="dropdown-item d-flex align-items-center" href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -78,7 +78,7 @@
     </div>
     <div class="card-footer">
         <div class="d-flex post-actions">
-<!--            Like Button-->
+            <!--            Like Button-->
             <form id="post-Like{{p.id}}">
                 {% csrf_token %}
                 <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
@@ -110,9 +110,221 @@
                 <p class="d-none d-md-block ml-2">Share</p>
             </a>
         </div>
+        <!-- Comment Section Start -->
+        <!--                <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">-->
+        <style>
+            /*==================================================
+              Post Contents CSS
+              ==================================================*/
+
+            .post-content{
+              background: #f8f8f8;
+              border-radius: 4px;
+              width: 100%;
+              border: 1px solid #f1f2f2;
+              margin-bottom: 20px;
+              overflow: hidden;
+              position: relative;
+            }
+
+            .post-content img.post-image, video.post-video, .google-maps{
+              width: 100%;
+              height: auto;
+            }
+
+            .post-content .google-maps .map{
+              height: 300px;
+            }
+
+            .post-content .post-container{
+              padding: 20px;
+            }
+
+            .post-content .post-container .post-detail{
+              margin-left: 65px;
+              position: relative;
+            }
+
+            .post-content .post-container .post-detail .post-text{
+              line-height: 24px;
+              margin: 0;
+            }
+            .post-text{
+                display: flex;
+                align-items: center;
+            }
+            .post-content .post-container .post-detail .reaction{
+              position: absolute;
+              right: 0;
+              top: 0;
+            }
+
+            .post-content .post-container .post-detail .post-reply{
+              display: inline-flex;
+              margin: 10px auto;
+              width: 100%;
+              padding:8px 10px;
+            }
+            .post-comment{
+
+            }
+            .post-content .post-container .post-detail .post-comment img.profile-photo-sm{
+              margin-right: 10px;
+            }
+
+            .post-content .post-container .post-detail .post-comment .form-control{
+              height: 30px;
+              border: 1px solid #ccc;
+              box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+              margin: 7px 0;
+              min-width: 0;
+            }
+
+            img.profile-photo-md {
+                height: 50px;
+                width: 50px;
+                object-fit:cover;
+                border-radius: 50%;
+            }
+
+            img.profile-photo-sm {
+                object-fit:cover;
+                height: 40px;
+                width: 40px;
+                border-radius: 50%;
+            }
+
+            .text-green {
+                color: #8dc63f;
+            }
+
+            .text-red {
+                color: #ef4136;
+            }
+
+            .following {
+                color: #8dc63f;
+                font-size: 12px;
+                margin-left: 20px;
+            }
+
+
+            .line-divider{
+                display:block;
+            }
+
+            .img-xs{
+                object-fit:cover;
+            }
+
+
+
+
+
+
+
+        </style>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    {% if not p.comments.all %}
+                    <h2 class="text-muted">No Comments</h2>
+                    {% else %}
+
+                    <div class="post-content">
+                        {% for comment in p.comments.all %}
+                        {% if comment.parent == None %}
+                        <div class="post-container">
+                            <img src="http://127.0.0.1:8000/media/{{comment.commenter_id.image}}" alt="{{comment.commenter_id.fname}}"
+                                 class="profile-photo-md pull-left">
+                            <div class="post-detail">
+                                <div class="user-info">
+                                    <h5><a href="/irrigreatapp/friendprofile/{{comment.commenter_id.id}}" class="profile-link">{{ comment.commenter_id.fname }} {{comment.commenter_id.lname}}</a>
+                                        <span
+                                                class="following">following</span></h5>
+                                    <p class="text-muted">Published a comment on {{ comment.creatDate.date }}</p>
+                                </div>
+                                <div class="reaction">
+                                    <a class="btn text-green"><i class="fa fa-thumbs-up"></i> 13</a>
+                                    <a class="btn text-red"><i class="fa fa-thumbs-down"></i> 0</a>
+                                </div>
+                                <!-- <div class="line-divider"></div>-->
+                                <div class="post-comment rounded">
+                                    <p> {{ comment.body }}</p>
+                                    <div class="line-divider"></div>
+                                    {% if reply.parent == comment.parent %}
+                                    {% for reply in p.comments.all %}
+                                    {% if reply.parent != None %}
+                                    {% for r in comment.parents.all %}
+                                    <h1 class=" border">{{r.body}}</h1>
+                                    {% endfor %}
+                                    {% endif %}
+                                    {% endfor %}
+                                    {% endif %}
+                                </div>
+                                <!-- Collaps comment start -->
+                                <p>
+                                    <a class="" data-bs-toggle="collapse" href="#commentReply{{ comment.id }}"
+                                       role="button" aria-expanded="false" aria-controls="commentReply{{ comment.id }}">
+                                        Reply
+                                    </a>
+                                </p>
+                                <div class="collapse" id="commentReply{{ comment.id }}">
+                                    <div class="post-comment">
+                                        <div class="post-text">
+                                            <img src="http://127.0.0.1:8000/media/{{logeduser.image}}" alt="{{logeduser.fname}}"
+                                                 class="profile-photo-sm mr-3">
+                                            <form action="/irrigreatapp/postComment" method="post" class="w-100">
+                                                {% csrf_token %}
+                                                <div class="input-group input-group-lg mb-3">
+                                                    <input readonly hidden type="text" value="{{comment.id}}"
+                                                           name="comment_id">
+                                                    <input readonly hidden type="text" value="{{p.id}}" name="post_id">
+                                                    <input readonly hidden type="text" value="{{p.user_id}}" name="blogger_id">
+                                                    <input readonly hidden type="text" value="{{logeduser.id}}" name="commenter_id">
+                                                    <textarea class="form-control" placeholder="Post a comment"
+                                                              aria-describedby="button-comment-reply"
+                                                              name="comment_body"></textarea>
+                                                    <button class="btn btn-outline-secondary" type="submit"
+                                                            id="button-comment-reply">Reply
+                                                    </button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Collaps comment End -->
+                                <div class="line-divider"></div>
+                            </div>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                    <div class="post-text">
+                        <img src="http://127.0.0.1:8000/media/{{logeduser.image}}" alt="{{logeduser.fname}}"
+                             class="profile-photo-sm mr-3">
+                        <form action="/irrigreatapp/postComment" method="post" class="w-100">
+                            {% csrf_token %}
+                            <div class="input-group input-group-lg mb-3">
+                                <input readonly hidden type="text" value="{{comment.id}}" name="comment_id">
+                                <input readonly hidden type="text" value="{{p.id}}" name="post_id">
+                                <input readonly hidden type="text" value="{{p.user_id}}" name="blogger_id">
+                                <input readonly hidden type="text" value="{{ logeduser.id }}" name="commenter_id">
+                                <textarea class="form-control" placeholder="Post a comment"
+                                          aria-describedby="button-comment" name="comment_body"></textarea>
+                                <button class="btn btn-outline-secondary" type="submit" id="button-comment">Comment
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Comment Section End -->
     </div>
 </div>
-    <script type="text/javascript">
+<script type="text/javascript">
         $(document).on('submit','#post-Like{{p.id}}',function(e){
                 e.preventDefault();
                 console.log('Liked{{p.id}}')
@@ -129,4 +341,25 @@
                     }
                 })
         })
-    </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</script>
